--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
   --primary-color: #0c0c0c;
   --secondary-color: #ff0000;
   --tertiary-color: #9c3131;
+  --border-color: #636363;
 }
 
 body {
@@ -48,10 +49,22 @@ h1 {
   font-size: var(--step-5);
 }
 
-h2 {}
+h2 {
+  text-shadow: #ad0101 1px 0 20px;
+}
 
 p {
   margin-bottom: 6rem;
 }
 
-.container {}
+.container {
+  background-image: url(/src/assets/space.jpg);
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: var(--border-color);
+  transition: all 1s ease-in-out;
+}
