--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,19 @@ h1 {
 
 h2 {
   text-shadow: #ad0101 1px 0 20px;
+  animation: fadeIn 5s;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 
 p {
   margin-bottom: 6rem;
